--- a/index.html
+++ b/index.html
@@ -195,11 +195,14 @@
                 <section class="github section">
                     <div class="section-inner">
                         <h2 class="heading">My GitHub</h2>
-                        <p>You can embed your GitHub contribution graph calendar using IonicaBizau's <a href="https://github.com/IonicaBizau/github-calendar" target="_blank">GitHub Calendar</a> widget.
+                        <div class="calendar">
+                                <img src="https://assets-cdn.github.com/images/spinners/octocat-spinner-128.gif" class="spinner"/>
+                                <p class="spinner-text monospace">Crunching <a href="https://github.com/shekharpalit">@shekharpalit</a>'s contributions just for you.</p>
+                         </div>
 
-                        <div id="github-graph" class="github-graph">
-
-                        </div><!--//github-graph-->
+                            <script src="assets/plugins/github-calendar/dist/github-calendar.min.js"></script>
+                            <script src="assets/plugins/github-calendar/example/js/main.js"></script>
+                            <pre>
 
                         <p>You can also embed your GitHub activities using Casey Scarborough's <a href="https://caseyscarborough.com/projects/github-activity/" target="_blank">GitHub Activity Stream</a> widget.
                         <!--//Usage: https://caseyscarborough.com/projects/github-activity/ -->
