--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                          </div>
 
                             <script src="assets/plugins/github-calendar/dist/github-calendar.min.js"></script>
-                            <script src="assets/plugins/github-calendar/example/js/main.js"></script>
+                            <script src="main.js"></script>
                             <pre>
 
                         <p>You can also embed your GitHub activities using Casey Scarborough's <a href="https://caseyscarborough.com/projects/github-activity/" target="_blank">GitHub Activity Stream</a> widget.
