fixed zombie code

--- a/index.html
+++ b/index.html
@@ -110,35 +110,26 @@
 
                              <div class="item row">
                                 <a class="col-md-4 col-12" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/startupkit-bootstrap-theme-for-saas-startups/" target="_blank">
-                                <img class="img-fluid project-image" src="assets/images/projects/project-3.png" alt="project name" />
+                                <img class="img-fluid project-image" src="assets/images/projects/snake.png" alt="Snake and arrow" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/startupkit-bootstrap-theme-for-saas-startups/" target="_blank">Startup Kit - Bootstrap 4 Theme for SaaS Startups</a></h3>
-                                    <p class="mb-2">You can put one of your secondary projects here. Suspendisse in tellus dolor. Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim, eget iaculis ante dolor non turpis.</p>
+                                    <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/startupkit-bootstrap-theme-for-saas-startups/" target="_blank">Snake and arrow using OPENGL</a></h3>
+                                    <p class="mb-2">The goal of this project is to use random algorithm for a simple snake and arrow game using C++ and OpenGL.</p>
                                     <p><a class="more-link" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/startupkit-bootstrap-theme-for-saas-startups/" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
                                 </div><!--//desc-->
                             </div><!--//item-->
 
                             <div class="item row">
                                 <a class="col-md-4 col-12" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/bootstrap-template-for-mobile-apps-nova-pro/" target="_blank">
-                                <img class="img-fluid project-image" src="assets/images/projects/project-4.png" alt="project name" />
+                                <img class="img-fluid project-image" src="assets/images/projects/dg0Jblx.gif" alt="Text Generation" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/bootstrap-template-for-mobile-apps-nova-pro/" target="_blank">Nova Pro - Bootstrap 4 Theme for Mobile Startups</a></h3>
-                                    <p class="mb-2">You can put one of your secondary projects here. Suspendisse in tellus dolor. Vivamus a tortor eu turpis pharetra consequat quis non metus.</p>
+                                    <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/bootstrap-template-for-mobile-apps-nova-pro/" target="_blank">Text Generation using LSTM</a></h3>
+                                    <p class="mb-2">The goal of this project is to design and develop an efficient deep learning model for text generation, which will help in future to generate code for software development.</p>
                                     <p><a class="more-link" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/bootstrap-template-for-mobile-apps-nova-pro/" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
                                 </div><!--//desc-->
                             </div><!--//item-->
-                            <div class="item row">
-                                <a class="col-md-4 col-12" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/delta-bootstrap-theme-for-mobile-apps/" target="_blank">
-                                <img class="img-fluid project-image" src="assets/images/projects/project-5.png" alt="project name" />
-                                </a>
-                                <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/delta-bootstrap-theme-for-mobile-apps/" target="_blank">Delta - Bootstrap 4 Theme for Promoting Mobile Apps</a></h3>
-                                    <p class="mb-2"> You can put one of your secondary projects here. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi.</p>
-                                    <p><a class="more-link" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/delta-bootstrap-theme-for-mobile-apps/" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
-                                </div><!--//desc-->
-                            </div><!--//item-->
+
 
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -148,17 +139,29 @@
                     <div class="section-inner">
                         <h2 class="heading">Research Projects</h2>
                         <div class="content">
-                            <div class="item">
-                                <h3 class="title"><a href="#" target="_blank">A new and simple hash table with almost perfect hash function</a> <span class="badge badge-theme"></span></h3>
-                                <p class="summary">The goal of this project is to desgin and develop an efficient hashtable, which is used to generate a perfect hash function for distributed server Architecture (Similar to consistant hashing).</p>
-                                <p><a class="more-link" href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/free-bootstrap4-resume-cv-template-for-developers-pillar/" target="_blank"><i class="fas fa-external-link-alt"></i>Download Now</a></p>
-                            </div><!--//item-->
-                            <div class="item">
-                                <h3 class="title"><a href="#" target="_blank">University Time table generation using genetic algorithm</a> <span class="badge badge-theme">Free</span></h3>
-                                <p class="summary">The goal of this project is to desing and develop an efficient model for time table generation with small dataset using genetic algorithm. </p>
-                                <p><a class="more-link" href="https://themes.3rdwavemedia.com/bootstrap-templates/speciality/devblog-free-bootstrap-4-blog-template-for-developers/" target="_blank"><i class="fas fa-external-link-alt"></i>Link to the paper</a></p>
-                            </div><!--//item-->
-                            <!--//item-->
+                            <div class="item row">
+                                <a class="col-md-4 col-12" href="#" target="_blank"><span class="badge badge-theme">In Progress</span></h3>
+                                <img class="img-fluid project-image" src="assets/images/projects/hashtable.gif" alt="hashTable" />
+                                </a>
+                                <div class="desc col-md-8 col-12">
+                                    <h3 class="title"><a href="#" target="_blank">A new and simple hash table with almost perfect hash function</a></h3>
+                                    <p class="mb-2"> The goal of this project is to desgin and develop an efficient hashtable, which is used to generate a perfect hash function for distributed server Architecture (Similar to consistant hashing).</p>
+                                    <p><a class="more-link" href="#" target="_blank"><i class="fas fa-external-link-alt"></i>Link to the paper</a></p>
+                                </div><!--//desc-->
+                            </div>
+
+
+                            <div class="item row">
+                                <a class="col-md-4 col-12" href="#" target="_blank"><span class="badge badge-theme">Completed</span></h3>
+                                <img class="img-fluid project-image" src="assets/images/projects/1_a0TD1HL_GXvrafznVBpUOA.gif" alt="Genetic Algorithm" />
+                                </a>
+                                <div class="desc col-md-8 col-12">
+                                    <h3 class="title"><a href="#" target="_blank">University Time table generation using genetic algorithm</a></h3>
+                                    <p class="mb-2"> The goal of this project is to desing and develop an efficient model for time table generation with small dataset using genetic algorithm.</p>
+                                    <p><a class="more-link" href="#" target="_blank"><i class="fas fa-external-link-alt"></i>Link to the paper</a></p>
+                                </div><!--//desc-->
+                            </div>
+
 
                             <a class="btn btn-cta-secondary" href="#">More on CoderWall <i class="fas fa-chevron-right"></i></a>
 
@@ -373,7 +376,7 @@
                     <div class="section-inner">
                         <h2 class="heading">Conferences</h2>
                         <div class="content">
-                            
+
                         </div><!--//content-->
                     </div><!--//section-inner-->
                 </aside><!--//section-->
@@ -420,7 +423,7 @@
     <footer class="footer">
         <div class="container text-center">
                 <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can check out our commercial license options via our website: themes.3rdwavemedia.com */-->
-                
+
         </div><!--//container-->
     </footer><!--//footer-->
 
